# Art_Optimal

./: CMakeLists.txt  README.md  input_test.txt
src/: bitmap.h  debug_2.txt  image.h  main.cpp  optimizer.h  output_0.txt  rotation.h  utils.cpp  utils.h
